Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Ngư dân 'đỏ mắt' tìm bạn đi biển",
+    "content": "Trong những tháng đầu năm 2025, ngư dân ở huyện Thạch Hà, Hà Tĩnh đang gặp khó khăn trong việc tìm kiếm bạn thuyền để ra khơi đánh bắt hải sản do thiếu lao động. Nhiều tàu thuyền phải nằm bờ hoặc ra khơi với số lượng ngư dân ít hơn cần thiết, dẫn đến thu nhập bấp bênh và áp lực trong công việc. Nguyên nhân chính là do thanh niên địa phương đã chọn đi xuất khẩu lao động hoặc làm việc tại các khu công nghiệp, khiến nghề đi biển trở nên ít hấp dẫn hơn.",
+    "link": "https://tuoitre.vn/ngu-dan-do-mat-tim-ban-di-bien-20250313013043297.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao ngư dân gặp khó khăn khi ra khơi đánh bắt hải sản?",
+    "answers": [
+      {
+        "text": "Do thiếu lao động",
+        "correct": true
+      },
+      {
+        "text": "Do thời tiết không thuận lợi",
+        "correct": false
+      },
+      {
+        "text": "Do tàu thuyền hư hỏng",
+        "correct": false
+      },
+      {
+        "text": "Do giá hải sản giảm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công ty thuộc Vingroup chuyển nhượng một phần dự án Vinhomes Cổ Loa",
     "content": "Công ty VEFAC, thuộc Tập đoàn Vingroup, vừa được UBND TP Hà Nội cho phép chuyển nhượng một phần dự án Vinhomes Cổ Loa ở huyện Đông Anh với tổng mức đầu tư khoảng 30.360,5 tỷ đồng. Phần chuyển nhượng bao gồm đất xây dựng nhà ở cao tầng, nhà ở thấp tầng và đất công cộng với tổng diện tích lên đến 75 ha. Dự án có tổng diện tích sử dụng đất 261,46 ha và dự kiến phục vụ cho khoảng 37.300 người, dự kiến hoàn thành vào quý III-2025.",
     "link": "https://tuoitre.vn/cong-ty-thuoc-vingroup-chuyen-nhuong-mot-phan-du-an-vinhomes-co-loa-20250313123319155.htm",
@@ -882,33 +909,6 @@
     ]
   },
   {
-    "title": "Thanh niên vào khu công nghiệp, tàu xa bờ phải nằm bờ",
-    "content": "Nhiều tàu cá tại cảng Đông Tác (Phú Yên) đang trong tình trạng nằm bờ do thiếu thuyền viên. Nguyên nhân chính là giới trẻ ngày càng ít tham gia nghề đánh bắt ngoài khơi, chủ yếu vì họ chọn công việc trong các khu công nghiệp. Nhiều chủ tàu cho biết họ phải chật vật tìm kiếm bạn thuyền, thậm chí phải ứng trước tiền để thu hút ngư dân, nhưng vẫn gặp khó khăn trong việc tuyển đủ thuyền viên.",
-    "link": "https://tuoitre.vn/thanh-nien-vao-khu-cong-nghiep-tau-xa-bo-phai-nam-bo-20250313013531336.htm",
-    "cat": "kinh-doanh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao nhiều tàu cá phải nằm bờ ở Phú Yên?",
-    "answers": [
-      {
-        "text": "Vì thiếu thuyền viên do giới trẻ không tham gia nghề biển.",
-        "correct": true
-      },
-      {
-        "text": "Do thời tiết xấu không cho phép ra khơi.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì tàu cá không đủ điều kiện ra khơi.",
-        "correct": false
-      },
-      {
-        "text": "Vì nguồn lợi thủy sản giảm thấp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Kiến nghị rút ngắn thời gian chờ sử dụng thẻ BHYT",
     "content": "Cử tri Bạc Liêu đã đề xuất rút ngắn thời gian chờ sử dụng thẻ bảo hiểm y tế (BHYT) từ 30 ngày xuống thấp hơn nhằm đảm bảo quyền lợi cho người tham gia. Ý kiến này được đưa ra trong bối cảnh nhiều người cảm thấy bất tiện khi phải chờ quá lâu để được khám chữa bệnh sau khi đóng phí. Bộ Y tế đã ghi nhận và sẽ xem xét điều chỉnh quy định này trong tương lai để tạo điều kiện thuận lợi hơn cho người dân.",
     "link": "https://vnexpress.net/kien-nghi-rut-ngan-thoi-gian-cho-su-dung-the-bhyt-4860668.html",
@@ -1562,33 +1562,6 @@
     ]
   },
   {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -1615,6 +1588,33 @@
       },
       {
         "text": "150 ngày",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -1817,37 +1817,6 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
-    "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
-    "answers": [
-      {
-        "text": "97 tuổi",
-        "correct": true
-      },
-      {
-        "text": "90 tuổi",
-        "correct": false
-      },
-      {
-        "text": "85 tuổi",
-        "correct": false
-      },
-      {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bỏ tập gym vì bị PT 'chèo kéo'",
     "content": "Chị Ánh, 43 tuổi, đã bỏ tập gym sau khi bị huấn luyện viên cá nhân (PT) chèo kéo mua thực phẩm chức năng với giá cao, gây ức chế cho chị. Mặc dù đã chi hơn 50 triệu đồng cho gói tập, nhưng những lần áp lực mua hàng từ PT đã khiến chị quyết định ngừng tập luyện. Tình trạng tương tự cũng xảy ra với nhiều khách hàng khác, dẫn đến việc họ cảm thấy phiền phức và không hài lòng với dịch vụ. Các bác sĩ khuyến cáo rằng việc dùng thực phẩm chức năng không thể thay thế chế độ ăn uống và lối sống lành mạnh, và người tiêu dùng cần cẩn trọng khi chọn mua sản phẩm và dịch vụ.",
     "link": "https://vnexpress.net/bo-tap-gym-vi-bi-pt-cheo-keo-4857898.html",
@@ -1897,6 +1866,37 @@
       },
       {
         "text": "Cả hai bên đều phải bồi thường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "cat": "suc-khoe",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "answers": [
+      {
+        "text": "97 tuổi",
+        "correct": true
+      },
+      {
+        "text": "90 tuổi",
+        "correct": false
+      },
+      {
+        "text": "85 tuổi",
+        "correct": false
+      },
+      {
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -3281,33 +3281,6 @@
     ]
   },
   {
-    "title": "Rau củ quả nào tốt cho não?",
-    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
-    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
-    "answers": [
-      {
-        "text": "Có, rau củ quả rất tốt cho não trẻ.",
-        "correct": true
-      },
-      {
-        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
-        "correct": false
-      },
-      {
-        "text": "Rau củ quả không có tác dụng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -3361,6 +3334,33 @@
       },
       {
         "text": "12.000 ôtô điện",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Rau củ quả nào tốt cho não?",
+    "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
+    "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Rau củ quả có lợi cho sự phát triển trí não của trẻ không?",
+    "answers": [
+      {
+        "text": "Có, rau củ quả rất tốt cho não trẻ.",
+        "correct": true
+      },
+      {
+        "text": "Không, trẻ chỉ cần ăn thịt và hải sản.",
+        "correct": false
+      },
+      {
+        "text": "Rau củ quả không có tác dụng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ một số loại rau củ mới tốt cho não.",
         "correct": false
       }
     ]
@@ -4455,87 +4455,6 @@
       },
       {
         "text": "30/3",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ Canada sang Việt Nam lần hai để thay khớp gối",
-    "content": "Bà Christina Phypers, 71 tuổi, từ Canada đã trở lại Việt Nam để phẫu thuật thay khớp gối phải sau khi đã thay khớp gối trái thành công hai năm trước. Bà đã chọn Bệnh viện Đa khoa Tâm Anh Hà Nội để thực hiện phẫu thuật do chi phí hợp lý và kỹ thuật tiên tiến. Sau phẫu thuật, bà có thể hồi phục nhanh chóng và dự định khám phá nhiều địa điểm nổi tiếng tại Việt Nam trong thời gian 4 tháng tới.",
-    "link": "https://vnexpress.net/tu-canada-sang-viet-nam-lan-hai-de-thay-khop-goi-4859624.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Bà Christina Phypers đã làm gì khi trở lại Việt Nam?",
-    "answers": [
-      {
-        "text": "Thay khớp gối phải",
-        "correct": true
-      },
-      {
-        "text": "Khám bệnh khác",
-        "correct": false
-      },
-      {
-        "text": "Tham quan du lịch",
-        "correct": false
-      },
-      {
-        "text": "Học tiếng Việt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Dự báo nguy cơ sinh non để tìm cách giữ thai nhi khỏe mạnh",
-    "content": "Bài viết đề cập đến việc dự báo nguy cơ sinh non để giữ thai nhi khỏe mạnh, thông qua các phương pháp như xét nghiệm PartoSure. Chị Thủy và chị Mai là hai trường hợp được điều trị khi có nguy cơ sinh non, với các biện pháp can thiệp y tế kịp thời giúp bảo vệ thai nhi. Bác sĩ khuyến cáo thai phụ cần chú ý các dấu hiệu cảnh báo và đến cơ sở y tế khi có nghi ngờ.",
-    "link": "https://vnexpress.net/du-bao-nguy-co-sinh-non-de-tim-cach-giu-thai-nhi-khoe-manh-4860236.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để dự báo nguy cơ sinh non và giữ thai nhi khỏe mạnh?",
-    "answers": [
-      {
-        "text": "Sử dụng xét nghiệm PartoSure để đánh giá nguy cơ sinh non.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ cần nghỉ ngơi nhiều hơn khi mang thai.",
-        "correct": false
-      },
-      {
-        "text": "Uống vitamin để cải thiện sức khỏe thai nhi.",
-        "correct": false
-      },
-      {
-        "text": "Lựa chọn chế độ ăn uống bình thường mà không cần thay đổi.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "7 dưỡng chất dễ thiếu hụt gây rụng tóc",
-    "content": "Bài viết đề cập đến 7 dưỡng chất dễ thiếu hụt có thể gây ra tình trạng rụng tóc, bao gồm sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12 và magie. Thiếu hụt các dưỡng chất này có thể dẫn đến tóc yếu và rụng nhiều hơn mức bình thường. Việc bổ sung đầy đủ các dưỡng chất này là cần thiết để duy trì sức khỏe của tóc và ngăn ngừa tình trạng rụng tóc. Độc giả nên tham khảo ý kiến bác sĩ để có chế độ dinh dưỡng phù hợp.",
-    "link": "https://vnexpress.net/7-duong-chat-de-thieu-hut-gay-rung-toc-4860233.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Những dưỡng chất nào dễ thiếu hụt gây rụng tóc?",
-    "answers": [
-      {
-        "text": "Sắt, vitamin D, vitamin B7, kẽm, vitamin C, vitamin B12, magie",
-        "correct": true
-      },
-      {
-        "text": "Canxi, vitamin A, vitamin E",
-        "correct": false
-      },
-      {
-        "text": "Chất xơ, omega-3, vitamin K",
-        "correct": false
-      },
-      {
-        "text": "Protein, selen, vitamin B9",
         "correct": false
       }
     ]
