Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,64 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Nhà thiết kế Phan Huy lần thứ 3 mang thời trang Việt ra mắt tại Paris",
+    "content": "Nhà thiết kế Phan Huy đã ra mắt bộ sưu tập \"Thiêu thân\" tại Paris, đánh dấu lần thứ ba anh tham gia Tuần lễ thời trang này. Sau 5 tháng làm việc khẩn trương, bộ sưu tập nhận được nhiều lời khen từ giới chuyên môn, trong đó có Tổng biên tập Vogue Singapore. Phan Huy, Thủ khoa ngành thời trang, đã thể hiện phong cách tối giản và tính ứng dụng trong thiết kế, lấy cảm hứng từ loài thiêu thân, nhấn mạnh vẻ đẹp của ước mơ và khát vọng trong mỗi sản phẩm.",
+    "link": "https://dantri.com.vn/giai-tri/nha-thiet-ke-phan-huy-lan-thu-3-mang-thoi-trang-viet-ra-mat-tai-paris-20250312143523823.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Bộ sưu tập nào được nhà thiết kế Phan Huy ra mắt tại Paris?",
+    "answers": [
+      {
+        "text": "Thiêu thân",
+        "correct": true
+      },
+      {
+        "text": "Việt Nam thanh bình",
+        "correct": false
+      },
+      {
+        "text": "Ánh sáng đêm",
+        "correct": false
+      },
+      {
+        "text": "Mùa hè xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mỹ nhân Hàn diện đồ cao bồi gợi cảm, khoe cơ bụng săn chắc",
+    "content": "Tại show diễn Thu - Đông 2025 của Miu Miu tại Paris, Jang Won Young gây ấn tượng mạnh khi diện trang phục cao bồi gợi cảm, khoe trọn cơ bụng săn chắc. Cô kết hợp áo crop top với chân váy và mũ cao bồi, tạo nên phong cách vừa cá tính vừa quyến rũ. Cùng với Jang Won Young, Momo và các nghệ sĩ khác cũng thu hút sự chú ý với những bộ trang phục độc đáo, thể hiện sự tự tin và phong cách thời trang hiện đại.",
+    "link": "https://dantri.com.vn/giai-tri/my-nhan-han-dien-do-cao-boi-goi-cam-khoe-co-bung-san-chac-20250313021029184.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Jang Won Young đã diện trang phục gì tại show diễn Miu Miu?",
+    "answers": [
+      {
+        "text": "Áo crop top và chân váy cao bồi",
+        "correct": true
+      },
+      {
+        "text": "Váy dạ hội dài",
+        "correct": false
+      },
+      {
+        "text": "Áo phao và quần jeans",
+        "correct": false
+      },
+      {
+        "text": "Bikini và chân váy ngắn",
+        "correct": false
+      },
+      {
+        "text": "Áo sơ mi và quần âu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ngư dân 'đỏ mắt' tìm bạn đi biển",
     "content": "Trong những tháng đầu năm 2025, ngư dân ở huyện Thạch Hà, Hà Tĩnh đang gặp khó khăn trong việc tìm kiếm bạn thuyền để ra khơi đánh bắt hải sản do thiếu lao động. Nhiều tàu thuyền phải nằm bờ hoặc ra khơi với số lượng ngư dân ít hơn cần thiết, dẫn đến thu nhập bấp bênh và áp lực trong công việc. Nguyên nhân chính là do thanh niên địa phương đã chọn đi xuất khẩu lao động hoặc làm việc tại các khu công nghiệp, khiến nghề đi biển trở nên ít hấp dẫn hơn.",
     "link": "https://tuoitre.vn/ngu-dan-do-mat-tim-ban-di-bien-20250313013043297.htm",
@@ -1562,6 +1620,33 @@
     ]
   },
   {
+    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
+    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
+    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
+    "cat": "gia-dinh",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
+    "answers": [
+      {
+        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
+        "correct": true
+      },
+      {
+        "text": "Tất cả mọi người đều ủng hộ",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất này không có ý nghĩa gì",
+        "correct": false
+      },
+      {
+        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết giúp mẹ ba con giảm 10 kg trong 90 ngày",
     "content": "Giang, 34 tuổi, đã giảm 10 kg trong 90 ngày nhờ vào chế độ ăn uống lành mạnh và tập luyện thể chất. Sau khi nhận thấy sự thay đổi tiêu cực về ngoại hình và sức khỏe, cô quyết định thay đổi lối sống bằng cách ăn đủ nhóm chất dinh dưỡng và tập luyện 5 ngày mỗi tuần. Kết quả, cân nặng của cô giảm từ 59 kg xuống còn 49 kg, vòng bụng thu gọn và sức khỏe được cải thiện rõ rệt. Giang hiện duy trì lối sống lành mạnh và cảm thấy tự tin hơn về bản thân.",
     "link": "https://vnexpress.net/bi-quyet-giup-me-ba-con-giam-10-kg-trong-90-ngay-4860179.html",
@@ -1588,33 +1673,6 @@
       },
       {
         "text": "150 ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tranh luận đề xuất sinh con thứ hai được nghỉ 7 tháng",
-    "content": "Đề xuất tăng thời gian nghỉ thai sản lên 7 tháng cho phụ nữ sinh con thứ hai đang gây tranh luận trong xã hội Việt Nam. Nhiều lao động nữ bày tỏ lo ngại về khả năng mất việc làm hơn là việc được nghỉ dài hơn. Họ cho rằng việc tăng thời gian nghỉ không giải quyết được gốc rễ vấn đề mà họ đang đối mặt, như áp lực tài chính và khó khăn trong việc tìm việc làm. Các doanh nghiệp cũng lo ngại về ảnh hưởng của đề xuất này đến hoạt động sản xuất và tuyển dụng.",
-    "link": "https://vnexpress.net/tranh-luan-de-xuat-sinh-con-thu-hai-duoc-nghi-7-thang-4860053.html",
-    "cat": "gia-dinh",
-    "positivity": 5,
-    "importance": 8,
-    "question": "Đề xuất nghỉ thai sản 7 tháng có được ủng hộ không?",
-    "answers": [
-      {
-        "text": "Nhiều lao động nữ lo ngại về việc mất việc làm",
-        "correct": true
-      },
-      {
-        "text": "Tất cả mọi người đều ủng hộ",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất này không có ý nghĩa gì",
-        "correct": false
-      },
-      {
-        "text": "Đề xuất chỉ được ủng hộ bởi doanh nghiệp",
         "correct": false
       }
     ]
@@ -1817,6 +1875,33 @@
     ]
   },
   {
+    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
+    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
+    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
+    "cat": "phap-luat",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
+    "answers": [
+      {
+        "text": "Người đi xe máy",
+        "correct": true
+      },
+      {
+        "text": "Người lái ôtô",
+        "correct": false
+      },
+      {
+        "text": "Không ai phải bồi thường",
+        "correct": false
+      },
+      {
+        "text": "Cả hai bên đều phải bồi thường",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
     "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
     "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
@@ -1843,33 +1928,6 @@
       },
       {
         "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
-    "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
-    "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Trong vụ tai nạn, ai là người phải bồi thường?",
-    "answers": [
-      {
-        "text": "Người đi xe máy",
-        "correct": true
-      },
-      {
-        "text": "Người lái ôtô",
-        "correct": false
-      },
-      {
-        "text": "Không ai phải bồi thường",
-        "correct": false
-      },
-      {
-        "text": "Cả hai bên đều phải bồi thường",
         "correct": false
       }
     ]
@@ -3281,6 +3339,33 @@
     ]
   },
   {
+    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
+    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
+    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
+    "answers": [
+      {
+        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
+        "correct": true
+      },
+      {
+        "text": "Cà chua, khoai tây, bí ngô",
+        "correct": false
+      },
+      {
+        "text": "Nho, chuối, xoài, dứa",
+        "correct": false
+      },
+      {
+        "text": "Bông cải xanh, khoai lang, hành tây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Rau củ quả nào tốt cho não?",
     "content": "Bài viết nhấn mạnh rằng bên cạnh các thực phẩm như trứng, hải sản và thịt, rau củ quả cũng có vai trò quan trọng trong việc phát triển trí não của trẻ. Nhiều loại rau củ quả chứa chất dinh dưỡng cần thiết giúp thúc đẩy sự phát triển trí não, điều này thường bị bỏ qua trong chế độ ăn uống của trẻ. Việc bổ sung rau củ quả vào khẩu phần ăn của trẻ sẽ không chỉ giúp sức khỏe tổng thể mà còn hỗ trợ tốt cho sự phát triển trí tuệ.",
     "link": "https://vnexpress.net/rau-cu-qua-nao-tot-cho-nao-4860417.html",
@@ -3334,33 +3419,6 @@
       },
       {
         "text": "12.000 ôtô điện",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
-    "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
-    "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Những loại rau quả nào giúp làm mát cơ thể khi nắng nóng?",
-    "answers": [
-      {
-        "text": "Nước dừa, dưa hấu, dưa chuột, rau lá xanh, cam quýt",
-        "correct": true
-      },
-      {
-        "text": "Cà chua, khoai tây, bí ngô",
-        "correct": false
-      },
-      {
-        "text": "Nho, chuối, xoài, dứa",
-        "correct": false
-      },
-      {
-        "text": "Bông cải xanh, khoai lang, hành tây",
         "correct": false
       }
     ]
