Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "HLV Bahrain: 'Đấu Indonesia như gặp Hà Lan'",
+    "content": "HLV Dragan Talajic của đội tuyển Bahrain đã chỉ trích việc Indonesia ồ ạt nhập tịch cầu thủ gốc Hà Lan trước trận đấu ở vòng loại World Cup 2026. Ông cho rằng đội hình của Indonesia giống như một đội Hà Lan thu nhỏ với nhiều cầu thủ nhập tịch và thể hiện sự tự tin vào khả năng của đội mình. Trận đấu giữa Bahrain và Indonesia sẽ diễn ra vào ngày 25/3, sau khi cả hai đội vừa hòa 2-2 ở lượt đi.",
+    "link": "https://vnexpress.net/hlv-bahrain-dau-indonesia-nhu-gap-ha-lan-4860848.html",
+    "cat": "the-thao",
+    "positivity": 7,
+    "importance": 8,
+    "question": "HLV Bahrain đã có những phát biểu gì về đội tuyển Indonesia trước trận đấu sắp tới?",
+    "answers": [
+      {
+        "text": "Ông chỉ trích việc Indonesia nhập tịch cầu thủ gốc Hà Lan.",
+        "correct": true
+      },
+      {
+        "text": "Ông khen ngợi đội hình của Indonesia.",
+        "correct": false
+      },
+      {
+        "text": "Ông dự đoán Bahrain sẽ thua trận.",
+        "correct": false
+      },
+      {
+        "text": "Ông không bình luận gì về Indonesia.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Nhà thiết kế Phan Huy lần thứ 3 mang thời trang Việt ra mắt tại Paris",
     "content": "Nhà thiết kế Phan Huy đã ra mắt bộ sưu tập \"Thiêu thân\" tại Paris, đánh dấu lần thứ ba anh tham gia Tuần lễ thời trang này. Sau 5 tháng làm việc khẩn trương, bộ sưu tập nhận được nhiều lời khen từ giới chuyên môn, trong đó có Tổng biên tập Vogue Singapore. Phan Huy, Thủ khoa ngành thời trang, đã thể hiện phong cách tối giản và tính ứng dụng trong thiết kế, lấy cảm hứng từ loài thiêu thân, nhấn mạnh vẻ đẹp của ước mơ và khát vọng trong mỗi sản phẩm.",
     "link": "https://dantri.com.vn/giai-tri/nha-thiet-ke-phan-huy-lan-thu-3-mang-thoi-trang-viet-ra-mat-tai-paris-20250312143523823.htm",
