--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Những tỉnh có diện tích gần bằng nhau nhưng GRDP 'một trời một vực'",
+    "content": "Bài viết phân tích sự chênh lệch về quy mô kinh tế (GRDP) giữa các tỉnh có diện tích tương đương tại Việt Nam. Bắc Ninh, với diện tích nhỏ nhất, lại có GRDP lớn thứ 10 cả nước, vượt qua cả Nghệ An, tỉnh có diện tích lớn nhất. Các tỉnh Đồng bằng sông Hồng như Hải Dương, Vĩnh Phúc cũng có GRDP cao mặc dù diện tích nhỏ. Ngược lại, nhiều tỉnh miền núi có diện tích lớn nhưng GRDP thấp, cho thấy sự không đồng đều trong phát triển kinh tế giữa các địa phương.",
+    "link": "https://tuoitre.vn/nhung-tinh-co-dien-tich-gan-bang-nhau-nhung-grdp-mot-troi-mot-vuc-20250313131616904.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tỉnh nào có diện tích nhỏ nhất nhưng GRDP cao nhất Việt Nam?",
+    "answers": [
+      {
+        "text": "Bắc Ninh",
+        "correct": true
+      },
+      {
+        "text": "Nghệ An",
+        "correct": false
+      },
+      {
+        "text": "Hà Nam",
+        "correct": false
+      },
+      {
+        "text": "Hưng Yên",
+        "correct": false
+      },
+      {
+        "text": "Hải Dương",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "HLV Bahrain: 'Đấu Indonesia như gặp Hà Lan'",
     "content": "HLV Dragan Talajic của đội tuyển Bahrain đã chỉ trích việc Indonesia ồ ạt nhập tịch cầu thủ gốc Hà Lan trước trận đấu ở vòng loại World Cup 2026. Ông cho rằng đội hình của Indonesia giống như một đội Hà Lan thu nhỏ với nhiều cầu thủ nhập tịch và thể hiện sự tự tin vào khả năng của đội mình. Trận đấu giữa Bahrain và Indonesia sẽ diễn ra vào ngày 25/3, sau khi cả hai đội vừa hòa 2-2 ở lượt đi.",
     "link": "https://vnexpress.net/hlv-bahrain-dau-indonesia-nhu-gap-ha-lan-4860848.html",
@@ -103,6 +134,37 @@
       },
       {
         "text": "Ông không bình luận gì về Indonesia.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến dịch \"độn thổ\" bí mật của Nga khiến Ukraine không kịp trở tay ở Kursk",
+    "content": "Trong một chiến dịch bí mật mang tên \"Chiến dịch Đường ống\", quân đội Nga đã tiến hành một cuộc tấn công đột kích vào các vị trí của Ukraine ở tỉnh Kursk, cắt đứt các tuyến tiếp tế của đối phương và khiến lực lượng Ukraine rơi vào tình trạng hỗn loạn. Tổng thống Vladimir Putin đã khen ngợi sự táo bạo và hiệu quả của các binh sĩ Nga trong chiến dịch này, trong đó họ đã sử dụng đường ống dẫn khí để xâm nhập vào khu vực đối phương. Chiến dịch này diễn ra sau nhiều tháng chuẩn bị và đã giúp Nga giành lại được nhiều khu vực quan trọng ở Kursk.",
+    "link": "https://dantri.com.vn/the-gioi/chien-dich-don-tho-bi-mat-cua-nga-khien-ukraine-khong-kip-tro-tay-o-kursk-20250313121703079.htm",
+    "cat": "the-gioi",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Chiến dịch \"Đường ống\" của Nga đã được thực hiện như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng cách sử dụng đường ống dẫn khí để xâm nhập vào khu vực đối phương.",
+        "correct": true
+      },
+      {
+        "text": "Bằng cách tấn công trực diện từ trên không.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách hợp tác với các lực lượng quân sự quốc tế.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách sử dụng công nghệ chiến tranh điện tử.",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách xây dựng các căn cứ tạm thời gần biên giới.",
         "correct": false
       }
     ]
@@ -810,37 +872,6 @@
       },
       {
         "text": "Vì tiền boa không được báo cáo cho thuế thu nhập.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quân Nga bất ngờ chui lên từ lòng đất, lính Ukraine vỡ trận ở Sudzha",
-    "content": "Quân đội Nga đã thực hiện một chiến dịch táo bạo tại Sudzha, Kursk bằng cách sử dụng một đường ống dẫn khí đốt dài 15km để thâm nhập vào hậu phương của quân đội Ukraine. Chiến dịch này đã đạt được thành công lớn khi các binh sĩ Ukraine không kịp trở tay trước cuộc tấn công bất ngờ. Lãnh đạo Cộng hòa Chechnya, Ramzan Kadyrov, đã ca ngợi sự chuẩn bị và phối hợp chặt chẽ giữa các đơn vị quân đội Nga, cho rằng đây là một trong những chiến dịch hiệu quả nhất trong cuộc xung đột này.",
-    "link": "https://dantri.com.vn/the-gioi/quan-nga-bat-ngo-chui-len-tu-long-dat-linh-ukraine-vo-tran-o-sudzha-20250313102556559.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Quân đội Nga đã sử dụng chiến thuật gì trong cuộc tấn công ở Sudzha?",
-    "answers": [
-      {
-        "text": "Sử dụng đường ống khí đốt để thâm nhập hậu phương",
-        "correct": true
-      },
-      {
-        "text": "Tấn công trực diện vào các căn cứ quân sự",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng máy bay không người lái để quét sạch đối thủ",
-        "correct": false
-      },
-      {
-        "text": "Phát động chiến dịch đánh bom từ xa",
-        "correct": false
-      },
-      {
-        "text": "Tổ chức một cuộc tấn công đồng thời trên nhiều mặt trận",
         "correct": false
       }
     ]
@@ -1835,37 +1866,6 @@
     ]
   },
   {
-    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
-    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
-    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
-    "cat": "suc-khoe",
-    "positivity": 10,
-    "importance": 8,
-    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
-    "answers": [
-      {
-        "text": "97 tuổi",
-        "correct": true
-      },
-      {
-        "text": "90 tuổi",
-        "correct": false
-      },
-      {
-        "text": "85 tuổi",
-        "correct": false
-      },
-      {
-        "text": "100 tuổi",
-        "correct": false
-      },
-      {
-        "text": "92 tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Từ trong ngõ xe máy lao đầu vào ôtô - xe nào phải đền?",
     "content": "Trong vụ tai nạn giao thông xảy ra tại Hạ Long vào ngày 9/3, một thanh niên điều khiển xe máy đã lao từ trong ngõ ra đường và va chạm mạnh vào đầu xe ôtô. Người lái xe ôtô đang di chuyển với tốc độ an toàn dưới 30 km/h và có gắn camera hành trình ghi lại sự việc. Vụ tai nạn cho thấy sự cần thiết phải chú ý và báo hiệu khi rẽ tại những khu vực tầm nhìn hạn chế để tránh tai nạn giao thông.",
     "link": "https://vnexpress.net/tu-trong-ngo-xe-may-lao-dau-vao-oto-xe-nao-phai-den-4860385.html",
@@ -1915,6 +1915,37 @@
       },
       {
         "text": "Vì muốn tiết kiệm tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Một ngày của cụ bà 97 tuổi mê chạy bộ",
+    "content": "Cụ bà Nguyễn Thị Huynh, 97 tuổi, sống tại TP Hà Tĩnh, duy trì thói quen chạy bộ hai lần mỗi ngày. Hàng sáng, cụ dậy sớm để tập thể dục và ăn sáng đầy đủ trước khi tham gia các hoạt động khác. Dù tuổi cao, cụ vẫn tích cực tham gia các lớp thể dục tại phòng gym và thường xuyên chạy bộ quanh công viên. Cụ cũng được con cháu ghi lại những khoảnh khắc tập luyện và chia sẻ trên mạng xã hội, thu hút sự chú ý của nhiều người.",
+    "link": "https://vnexpress.net/mot-ngay-cua-cu-ba-97-tuoi-me-chay-bo-4860200.html",
+    "cat": "suc-khoe",
+    "positivity": 10,
+    "importance": 8,
+    "question": "Cụ bà Nguyễn Thị Huynh có bao nhiêu tuổi?",
+    "answers": [
+      {
+        "text": "97 tuổi",
+        "correct": true
+      },
+      {
+        "text": "90 tuổi",
+        "correct": false
+      },
+      {
+        "text": "85 tuổi",
+        "correct": false
+      },
+      {
+        "text": "100 tuổi",
+        "correct": false
+      },
+      {
+        "text": "92 tuổi",
         "correct": false
       }
     ]
@@ -3299,6 +3330,37 @@
     ]
   },
   {
+    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
+    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
+    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
+    "answers": [
+      {
+        "text": "Hơn 12.500 ôtô điện",
+        "correct": true
+      },
+      {
+        "text": "10.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "15.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "8.000 ôtô điện",
+        "correct": false
+      },
+      {
+        "text": "12.000 ôtô điện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "9 loại rau quả làm mát cơ thể khi nắng nóng",
     "content": "Trong thời tiết nắng nóng, việc bổ sung nước và chất điện giải là rất quan trọng để duy trì sức khỏe. Bài viết giới thiệu 9 loại rau quả giúp làm mát cơ thể, bao gồm nước dừa, dưa hấu, dưa chuột, rau lá xanh, và cam quýt. Những thực phẩm này không chỉ giàu nước mà còn cung cấp nhiều vitamin và khoáng chất thiết yếu, giúp cơ thể cân bằng và phòng tránh các vấn đề sức khỏe do nhiệt độ cao.",
     "link": "https://vnexpress.net/9-loai-rau-qua-lam-mat-co-the-khi-nang-nong-4860366.html",
@@ -3348,37 +3410,6 @@
       },
       {
         "text": "Chỉ một số loại rau củ mới tốt cho não.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "VinFast bán hơn 12.500 ôtô điện trong tháng 2",
-    "content": "VinFast đã bán được hơn 12.500 ôtô điện trong tháng 2, với mẫu VF 3 dẫn đầu doanh số 5.200 chiếc. Dù tháng 2 trùng với kỳ nghỉ Tết Nguyên đán, doanh số của VinFast vẫn tăng trưởng 20% so với tháng trước. Công ty hiện có 4 mẫu xe trong top 10 xe bán chạy nhất tại Việt Nam. VinFast đặt mục tiêu đạt doanh số toàn cầu 200.000 xe trong năm 2025.",
-    "link": "https://vnexpress.net/vinfast-ban-hon-12-500-oto-dien-trong-thang-2-4860465.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 9,
-    "question": "VinFast đã bán được bao nhiêu ôtô điện trong tháng 2?",
-    "answers": [
-      {
-        "text": "Hơn 12.500 ôtô điện",
-        "correct": true
-      },
-      {
-        "text": "10.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "15.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "8.000 ôtô điện",
-        "correct": false
-      },
-      {
-        "text": "12.000 ôtô điện",
         "correct": false
       }
     ]
